cmake_minimum_required(VERSION 3.17)
project(Boost_Echo_Client)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Threads REQUIRED)
#target_link_libraries(Boost_Echo_Client Threads::Threads)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.45.0 COMPONENTS filesystem regex)
#if(Boost_FOUND)
#    target_link_libraries(Boost_Echo_Client Boost::filesystem Boost::regex)
#endif()
link_libraries("-lboost_system")
link_libraries(-pthread)
#FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
#TARGET_LINK_LIBRARIES(Boost_Echo_Client ${Boost_LIBARIES})
include_directories(include)

add_executable(Boost_Echo_Client include/connectionHandler.h src/connectionHandler.cpp src/BgrsClient.cpp src/InputReader.cpp include/InputReader.h src/OutputWriter.cpp include/OutputWriter.h)